added mockup to title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Brooklyn</title>
+		<title>Brooklyn Mockup</title>
 		<link type=“text/css” rel=“stylesheet” href=“style.css”>
 	</head>
 		<body>
